Added type of concert select

--- a/main.html
+++ b/main.html
@@ -54,6 +54,28 @@
             <!--<img src="images/arrow_right.png" id="next-btn" onclick="nextSlide()">-->
         </div>
     </div>
+    <div class="type_selector">
+        <div>
+            <input type="checkbox" name="type" id="all_types" value="all">
+            <label for="all">Усі типи</label>
+        </div>
+        <div>
+            <input type="checkbox" name="type" id="concert" value="cocert">
+            <label for="cocert">Концерти</label>
+        </div>
+        <div>
+            <input type="checkbox" name="type" id="stand_up" value="stand-up">
+            <label for="stand-up">Stand-Up</label>
+        </div>
+        <div>
+            <input type="checkbox" name="type" id="theatre" value="theatre">
+            <label for="theatre">Театр</label>
+        </div>
+        <div>
+            <input type="checkbox" name="type" id="kids" value="kids">
+            <label for="kids">Дітям</label>
+        </div>
+    </div>
 <script src="script_main.js"></script>
 </body>
 </html>
